fixed proj. metadata missing EFCore packages (used vs2022); add localDB even though wrong db - TODO -add in Subscriptions/TokenInfo entities/tables; Fixed issue w. startup - since NOT using views in MVC  edited Services and Application sections of middleware; edited connectstring to use SQLLite;

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "myConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=mySandbox;Integrated Security=True;MultipleActiveResultSets=True;",
+    "mySqlLiteConnectionString": "Data Source=C:\\Users\\klas_\\_myDocs\\_dev\\_vsCode\\test-aspnet-api-autoship\\localdatabase.db",
+    "mySQLConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Todo;Integrated Security=True;MultipleActiveResultSets=True;",
     "azCloudConnectionString": "Server = tcp:SERVERNAME, 1433; Initial Catalog = AZCloudDBNAme; Persist Security Info = False; User ID = MyAdminID; Password = ****; MultipleActiveResultSets = False; Encrypt = True; TrustServerCertificate = False; Connection Timeout = 30;"
   }
 
